--- a/analysis/gdp_prediction_analysis_shortened_data.Rmd
+++ b/analysis/gdp_prediction_analysis_shortened_data.Rmd
@@ -17,7 +17,7 @@ library(tswgewrapped)
 library(tidyverse)
 library(ggplot2)
 library(tseries)
-data = read.csv("../data/economic_indicators_all_ex_3mo_china.csv")[80:195,]
+data = read.csv("../data/economic_indicators_all_ex_3mo_china.csv")[80:195, ]
 ```
 
 
@@ -25,7 +25,6 @@ data = read.csv("../data/economic_indicators_all_ex_3mo_china.csv")[80:195,]
 
 
 ```{r}
-# shorten analysis to data beyond 75
 
 data %>% glimpse()
 x = data$gdp_change
@@ -37,33 +36,41 @@ px = plotts.sample.wge(x)
 
 ## Stationarity
 
+We start the analysis with an assessment of startionarity of the realization.
+
 ```{r}
 tswgewrapped::check_stationarity(x)
 ```
 
 ### Condition 1
 
-* There does not appear to be evidence of the mean changing over time.
+* There does not appear to be evidence of a trend in the data.
+* Additionaly there does not appear to be any kind of deterministic oscillation in the data
 
+Therefore, the assumption of constant mean does not appear to be violated.
 
 ### Condition 2
 
-There does not apprear to be evidence of the variance of the realization changing over time.
-the drastic change at time step 75 maybe uncharacterisic of the process generating this realization, but it is difficult to determine with only one realization.
+* There does not apprear to be evidence of the variance of the realization changing over time.
+* the drastic change at time step 75 maybe uncharacterisic of the process generating this realization, but it is difficult to determine with only one realization. This could be normal wandering behavior of the process generating this realization.
+
+Therefore, the assumption of constant variance does not appear to be violated.
 
 ### Condition 3
 
 The ACF of the first and second half of the realization appear to exhibit similar behavior.
 However, the autocorrelations have very low magnitudes - most of the autocorrelations do not appear to be significantly different than 0.
 
+Therefore, the assumption of constant autocorrelation does not appear to be violated.
 
 ### Conclusion
 
-* Given the above analysis, the realization appears to have been produced by a stationary process.
+Given the above analysis, there does not appear to be sufficient evidence to suggest that the process generating the realization is not stationary.
+We will continue the ananlysis assuming the process generating the realization is stationary.
 
 ## ARMA Model
 
-Given the analysis above, we will model it as stationary.
+Since the process generating the realization is assumed to be stationary, we will model this realization with an ARMA model.
 
 ### Model ID
 
@@ -92,6 +99,8 @@ est.s <- est.arma.wge(x, 2, 0)
 The results from the model fit appear to be nearly consisent with white noise.
 The resulting realization appears very close to white noise.
 Several of the autocorrelations of the results are marginally significant, which is more than expected.
+As secondary evaluation, the Ljung-Box test does not reject the null hypothesis that residuals are white noise at K = 24, but does reject the null hypothesis at K = 48.
+However, all the models selected by AIC and BIC show a similar behavior.
 
 ```{r}
 tswgewrapped::evaluate_residuals(est.s$res)
@@ -101,7 +110,7 @@ tswgewrapped::evaluate_residuals(est.s$res)
 ### Forecast Results
 
 
-```{r}
+```{r, results='hide'}
 models = list("ARMA(2,1)" = list(phi = est.s$phi,
                                   theta = est.s$theta,
                                   vara = est.s$avar,
@@ -159,6 +168,92 @@ data <- data %>% dplyr::select(c(gdp_change, nfjobschg, ipichg, treas10yr,
                                  homeownership, corpprofitchg, personincomechg, housingpermitschg,
                                  japanchg))
 ```
+
+
+
+
+### Modeling
+
+Initially we attempted to select models starting with all the variables and removing statistially insiginificant variables.
+However, this resulted in models that appeared to be very overfit.
+For more details see *VAR Modeling with Backward Feature Selection* in the appendix.
+
+We continued by starting with no variables in the model and visualizing the forecast at each variable addition to determine if the model appeared to overfit.
+This resulted in a much smaller model.
+The constant term was found to be significant, but the trend term was not significant. 
+Thus, we only fit models with the constant term.
+
+The models selected contained the variables `housingpermitschg` and `inventorieschg`.
+
+```{r, message=FALSE}
+lag.max = 12
+models = list("VARS AIC Both"    = list(select = "aic", trend_type = "const", lag.max = lag.max))
+mdl_build = ModelBuildMultivariateVAR$new(data[ , c(var_interest, 'housingpermitschg', 'inventorieschg')],
+                                          var_interest = var_interest,
+                                            mdl_list = models, verbose = 1)
+
+mdl_build$summarize_build()
+mdl_build$build_recommended_models()
+model.both <- mdl_build$get_final_models(subset = 'r')
+
+models = list("VARS AIC Inven"    = list(select = "aic", trend_type = "const", lag.max = lag.max))
+mdl_build = ModelBuildMultivariateVAR$new(data[ , c(var_interest, 'inventorieschg')],
+                                          var_interest = var_interest,
+                                            mdl_list = models, verbose = 1)
+
+mdl_build$summarize_build()
+mdl_build$build_recommended_models()
+model.inven <- mdl_build$get_final_models(subset = 'r')
+
+models = list("VARS AIC HousePerm"    = list(select = "aic", trend_type = "const", lag.max = lag.max))
+mdl_build = ModelBuildMultivariateVAR$new(data[ , c(var_interest, 'housingpermitschg')],
+                                          var_interest = var_interest,
+                                            mdl_list = models, verbose = 1)
+
+mdl_build$summarize_build()
+mdl_build$build_recommended_models()
+model.housperm <- mdl_build$get_final_models(subset = 'r')
+
+models <- append(model.both, model.inven)
+models <- append(models, model.housperm)
+
+
+for (name in names(models)){
+  models[[name]][['sliding_ase']] = TRUE
+}
+
+batch_size = 44
+n.ahead = 2
+
+mdl_compare = ModelCompareMultivariateVAR$new(data = data, var_interest = var_interest,
+                                              mdl_list = models, n.ahead = n.ahead, batch_size = batch_size, verbose = 1)
+
+mdl_compare$plot_batch_forecasts()
+mdl_compare$plot_histogram_ases()
+```
+
+It is difficult to determine when models appear to perform well based on the plot of the rolling forecasts.
+However, there appears to be some evidence that the forecast lags the behavior of the realization.
+While there are several instances where this behvaior can be seen, it is particularly evident when the realization dips suddenly near time step 75.
+The models forecast a dip in the next time step.
+
+Like the univariate models, these VAR models appear generally tend to capture the movement of the realization within the forecast intervals.
+
+From the plot of the rolling ASE, the model containing only `inventorieschg` appears to perform best.
+The ASE appears to be lower on average over the windows with the spread of the main distribution also being lower than the other two models.
+The outliers of the ASE plot also appear to be as extreme or less extreme than the other two models.
+
+
+```{r}
+#mdl_compare$evaluate_residuals()
+```
+
+
+
+
+# Appendix
+
+## VAR Modeling with Backward Feature Selection
 
 ### VAR with `trend_type = Trend`
 
@@ -402,54 +497,6 @@ mdl_compare$remove_models(c("VARS AIC Const - R",
 mdl_compare$plot_batch_forecasts()
 mdl_compare$plot_histogram_ases()
 ```
-
-
-
-### Simpler Model
-
-The simpler model appears to lag the realization.
-These simpler model perform much better than the complex models.
-
-These models appear to predict the response variable at a lag.
-
-```{r}
-lag.max = 12
-models = list("VARS AIC Const"    = list(select = "aic", trend_type = "const", lag.max = lag.max))
-mdl_build = ModelBuildMultivariateVAR$new(data[ , c(var_interest, 'housingpermitschg', 'inventorieschg')],
-                                          var_interest = var_interest,
-                                            mdl_list = models, verbose = 1)
-mdl_build$summarize_build()
-mdl_build$build_recommended_models()
-model.const <- mdl_build$get_final_models(subset = 'r')
-
-models = list("VARS AIC None"    = list(select = "aic", trend_type = "none", lag.max = lag.max))
-mdl_build = ModelBuildMultivariateVAR$new(data[ , c(var_interest, 'housingpermitschg', 'inventorieschg')],
-                                          var_interest = var_interest,
-                                            mdl_list = models, verbose = 1)
-mdl_build$summarize_build()
-mdl_build$build_recommended_models()
-model.none <- mdl_build$get_final_models(subset = 'r')
-
-models <- append(model.none, model.const)
-
-for (name in names(models)){
-  models[[name]][['sliding_ase']] = TRUE
-}
-
-batch_size = 44
-n.ahead = 2
-
-mdl_compare = ModelCompareMultivariateVAR$new(data = data, var_interest = var_interest,
-                                              mdl_list = models, n.ahead = n.ahead, batch_size = batch_size, verbose = 1)
-
-mdl_compare$plot_batch_forecasts()
-mdl_compare$plot_histogram_ases()
-```
-
-
-
-
-
 
 
 
