--- a/analysis/gdp_prediction_analysis_shortened_data.Rmd
+++ b/analysis/gdp_prediction_analysis_shortened_data.Rmd
@@ -1,17 +1,27 @@
 ---
-title: "gdp_prediction_analysis_shortened_data"
-author: "Stuart Miller"
-date: "April 2, 2020"
-output: html_document
+title: "GDP Prediction"
+author: "Nikhil Gutpa and Stuart Miller"
+date: "`r Sys.time()`"
+output:
+  github_document: 
+    toc: yes
+    toc_depth: 6
+  word_document:
+    toc: yes
+    toc_depth: '6'
+  html_document:
+    toc: yes
+    toc_depth: 6
+    toc_float: yes
+always_allow_html: yes
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Setup
 
-```{r message=FALSE, warning=FALSE}
+```{r message=FALSE, warning=FALSE, include=FALSE}
 library(tswge)
 library(tswgewrapped)
 library(tidyverse)
@@ -21,11 +31,52 @@ data = read.csv("../data/economic_indicators_all_ex_3mo_china.csv")[80:195, ]
 ```
 
 
-# Shortened Data
 
+# Introduction
+
+Economic recessions are periods of time when an economy shinks.
+These periods of time generally costly to businesses and the populace alike.
+Deep recessions can be particularly costly to the populace as business downsizing and business failures during recessions generally result in a decrease in available jobs (increasing unemployment).
+However, if it was possible to predict a coming recession with some confidence, then it may be possible for business and the populace to prepare and mitigate losses.
+
+We propose to model the change in GDP for the United States to attempt to predict recessions.
+A working definition of a recession is two consecutive quarters of decrease in GDP [1].
+Thus, we will use a 2-step ahead forecast in evaluating models.
+Eleven years (44 quarters) will be used for training models to predict the next 2 quarters.
+
+# Data
+
+All data was collected from [Federal Reserve Economic Data (FRED) Repository](https://fred.stlouisfed.org/),
+which is provided by the Federal Reserve Bank of Saint Louis.
+In addition to quarterly change in GDP, 18 exogenous variables were also collected.
+The data from 116 quarters (from 1990 to 2019) were collected.
+
+The exogenous variables are summerized in the table below.
+
+| Variable | Description | FRED ID |
+|----------|-------------|---------|
+| Date     | Date of observation | N/A |
+| gdp_change | Change in GDP from the previous observation | A191RP1Q027SBEA |
+| unrate   | Unemployment rate | UNRATE |
+| nfjobs   | Non-farming jobs  | PAYEMS | 
+| treas10yr | 10 Year US treasury constant maturity rate | DGS10 |
+| fedintrate | US federal interest rate | FEDFUNDS |
+| personincomechg | Change in real disposable personal income | A067RO1Q156NBEA |
+| cpichg | Change in Consumer Price Index for all urban consumers: all ttems in U.S. city average | CPIAUCNS |
+| popchg | Change in Population | POPTHM |
+| corpprofitchg | Change in Corporate profits after tax (converted to percent change) | CP |
+| crude_wtichg | Change in Spot Crude Oil Price: West Texas Intermediate | WTISPLC |
+| goldchg | Change in Gold Fixing Price 10:30 A.M. (London time) in london bullion market, based in U.S. Dollars | GOLDAMGBD228NLBM |
+| ppichg | Change in Producer price index | PPIACO |
+| japanchg | Change in US/Japan exchange rate | EXJPUS | 
+| ukchg | Change in US/UK exchange rate | EXUSUK |
+| wilshirechg | Change in Wilshire 5000 Total Market Full Cap Index | WILL5000INDFC |
+| ipichg | Change in Industrial Production Index | INDPRO |
+| inventorieschg | Change in Real Manufacturing and Trade Inventories | INVCMRMTSPL |
+| homeownership | Cahnge in Homeownership Rate for the United States | RHORUSQ156N |
+| housingpermitschg | Change in New Private Housing Units Authorized by Building Permits | PERMIT |
 
 ```{r}
-
 data %>% glimpse()
 x = data$gdp_change
 ```
@@ -33,6 +84,8 @@ x = data$gdp_change
 ```{r}
 px = plotts.sample.wge(x)
 ```
+
+# Modeling
 
 ## Stationarity
 
@@ -42,21 +95,21 @@ We start the analysis with an assessment of startionarity of the realization.
 tswgewrapped::check_stationarity(x)
 ```
 
-### Condition 1
+### Condition 1: Constant Mean
 
 * There does not appear to be evidence of a trend in the data.
 * Additionaly there does not appear to be any kind of deterministic oscillation in the data
 
 Therefore, the assumption of constant mean does not appear to be violated.
 
-### Condition 2
+### Condition 2: Constant Variance
 
 * There does not apprear to be evidence of the variance of the realization changing over time.
 * the drastic change at time step 75 maybe uncharacterisic of the process generating this realization, but it is difficult to determine with only one realization. This could be normal wandering behavior of the process generating this realization.
 
 Therefore, the assumption of constant variance does not appear to be violated.
 
-### Condition 3
+### Condition 3: Constant Autocorrelation
 
 The ACF of the first and second half of the realization appear to exhibit similar behavior.
 However, the autocorrelations have very low magnitudes - most of the autocorrelations do not appear to be significantly different than 0.
@@ -75,7 +128,7 @@ Since the process generating the realization is assumed to be stationary, we wil
 ### Model ID
 
 ```{r}
-aicbic(x, 0:12, 0:3)
+aicbic(x, 0:12, 0:3, silent = TRUE)
 ```
 
 Both AIC and BIC select low order models with an ARMA(2,0) selected as the best ID by both criteria.
@@ -140,7 +193,7 @@ mdl_compare$plot_histogram_ases()
 ```
 
 
-## VAR Modeling
+## VAR Model
 
 ### CCF Analysis
 
@@ -248,8 +301,30 @@ The outliers of the ASE plot also appear to be as extreme or less extreme than t
 #mdl_compare$evaluate_residuals()
 ```
 
+## Neural Network Model
 
 
+
+# References
+
+ 1. Jim Chappelow, Recession,  Investopedia. Accessed March 6, 2020. https://www.investopedia.com/terms/r/recession.asp
+ 2. U.S. Bureau of Economic Analysis, Gross Domestic Product [A191RP1Q027SBEA], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/A191RP1Q027SBEA, March 6, 2020.
+ 3. U.S. Bureau of Labor Statistics, All Employees, Total Nonfarm [PAYEMS], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/PAYEMS, March 6, 2020.
+ 4. Board of Governors of the Federal Reserve System (US), 10-Year Treasury Constant Maturity Rate [DGS10], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/DGS10, March 6, 2020.
+ 5. Board of Governors of the Federal Reserve System (US), Effective Federal Funds Rate [FEDFUNDS], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/FEDFUNDS, March 6, 2020.
+ 6. U.S. Bureau of Economic Analysis, Real Disposable Personal Income [A067RO1Q156NBEA], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/A067RO1Q156NBEA, March 6, 2020.
+ 7. U.S. Bureau of Labor Statistics, Consumer Price Index for All Urban Consumers: All Items in U.S. City Average [CPIAUCNS], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/CPIAUCNS, March 6, 2020.
+ 8. U.S. Bureau of Economic Analysis, Population [POPTHM], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/POPTHM, March 6, 2020.
+ 9. U.S. Bureau of Economic Analysis, Corporate Profits After Tax (without IVA and CCAdj) [CP], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/CP, March 6, 2020.
+ 10. Federal Reserve Bank of St. Louis, Spot Crude Oil Price: West Texas Intermediate (WTI) [WTISPLC], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/WTISPLC, March 6, 2020.
+ 11. ICE Benchmark Administration Limited (IBA), Gold Fixing Price 10:30 A.M. (London time) in London Bullion Market, based in U.S. Dollars [GOLDAMGBD228NLBM], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/GOLDAMGBD228NLBM, March 6, 2020.
+ 12. Board of Governors of the Federal Reserve System (US), Japan / U.S. Foreign Exchange Rate [EXJPUS], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/EXJPUS, March 6, 2020.
+ 13. Board of Governors of the Federal Reserve System (US), U.S. / U.K. Foreign Exchange Rate [EXUSUK], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/EXUSUK, March 6, 2020.
+ 14. Wilshire Associates, Wilshire 5000 Total Market Full Cap Index [WILL5000INDFC], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/WILL5000INDFC, March 26, 2020.
+ 15. Federal Reserve Bank of St. Louis, Real Manufacturing and Trade Inventories [INVCMRMTSPL], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/INVCMRMTSPL, March 26, 2020.
+ 16. U.S. Census Bureau and U.S. Department of Housing and Urban Development, New Private Housing Units Authorized by Building Permits [PERMIT], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/PERMIT, March 26, 2020.
+ 17. U.S. Census Bureau, Homeownership Rate for the United States [RHORUSQ156N], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/RHORUSQ156N, March 26, 2020.
+ 18. Board of Governors of the Federal Reserve System (US), Industrial Production Index [INDPRO], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/INDPRO, March 26, 2020.
 
 # Appendix
 
